--- a/adh_data.ipynb
+++ b/adh_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -780,6 +780,29 @@
    "metadata": {},
    "source": [
     "Again, these match up. Moreover, the latter line provides a benchmark comparison to try and figure out the units. The first line simply reports the average change. The latter takes the averages from ADH, grosses them up to make them decadal equivalents. Then takes the change. Note that they are close suggesting that the pct change reported in the ADH dataset are the decadal equivalents."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Household Wage and Salary, per adult, 1990 6.51\n",
+      "Average Household Wage and Salary, per adult, 2000 8.83 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Average Household Wage and Salary, per adult, 1990\",\n",
+    "      round(calc.std(df.set_index(\"yr\").loc[1990], \"relchg_avg_hhincwage_pc_pw\"),2))\n",
+    "\n",
+    "print(\"Average Household Wage and Salary, per adult, 2000\",\n",
+    "      round(calc.std(df.set_index(\"yr\").loc[2000], \"relchg_avg_hhincwage_pc_pw\"),2),\"\\n\")"
    ]
   },
   {
@@ -902,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -914,8 +937,8 @@
       "Dep. Variable:     relchg_avg_hhincwage_pc_pw   R-squared:                      0.4278\n",
       "Estimator:                            IV-2SLS   Adj. R-squared:                 0.4214\n",
       "No. Observations:                        1444   F-statistic:                    735.75\n",
-      "Date:                        Mon, May 21 2018   P-value (F-stat)                0.0000\n",
-      "Time:                                15:59:47   Distribution:                 chi2(16)\n",
+      "Date:                        Tue, May 22 2018   P-value (F-stat)                0.0000\n",
+      "Time:                                11:07:13   Distribution:                 chi2(16)\n",
       "Cov. Estimator:                     clustered                                         \n",
       "                                                                                      \n",
       "                                 Parameter Estimates                                 \n",
